tooltipster doesnt seem to work, scrapped; info box object completed.

--- a/price_highlight.css
+++ b/price_highlight.css
@@ -1,5 +1,5 @@
 .hover-box{
-    display: none;
+    display: block;
     position: absolute;
     min-width: 250px;
     min-height: 100px;
@@ -11,10 +11,19 @@
     
     font: Verdana, Geneva, sans-serif;
     font-size: 15pt;
-    
+    padding: 10px;
     
 }
 
+.tooltipster-content{
+    padding: 10px;
+}
+
+.tooltipster-box{
+    min-height: 100px;
+    min-width: 310px;
+    padding: 10px;
+}
 .hover-text{
     position: relative;
     display: inline-block;
