--- a/price_highlight.css
+++ b/price_highlight.css
@@ -1,4 +1,5 @@
 .hover-box{
+    all: initial;
     display: block;
     position: absolute;
     min-width: 250px;
@@ -9,7 +10,7 @@
     z-index: 100;
     background-color: antiquewhite;
     
-    font: Verdana, Geneva, sans-serif;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-size: 15pt;
     
 }
@@ -22,7 +23,13 @@
     border-style: dashed;
 }
 
+.valid-entry{
+    color: black;
+}
 
+.invalid-entry{
+    color: red;
+}
 
 .hover-info{
     
