minor css change to not use borders on the hoverable item

--- a/price_highlight.css
+++ b/price_highlight.css
@@ -27,9 +27,8 @@
 .hover-text{
     position: relative;
     display: inline-block;
-    border-color: black;
-    border-width: 1px;
-    border-style: dashed;
+    background-color: black;
+    color: white;
 }
 
 .valid-entry{
